# kuru-copy-trading-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  WORK-ITEMS.md  pyproject.toml
.github/issues/: 01-add-project-dependencies.md  02-define-test-fixtures.md  03-tests-core-data-models.md  04-implement-core-data-models.md  05-tests-configuration-management.md  06-implement-configuration-management.md  07-tests-monad-blockchain-connector.md  08-implement-monad-blockchain-connector.md  09-tests-kuru-sdk-wrapper.md  10-implement-kuru-sdk-wrapper.md  11-tests-risk-management.md  12-implement-risk-management.md  13-tests-wallet-monitoring.md  14-implement-wallet-monitoring.md  15-tests-copy-trading-engine.md  16-implement-copy-trading-engine.md  17-tests-bot-orchestrator.md  18-implement-bot-orchestrator.md  19-tests-cli-interface.md  20-implement-cli-interface.md  21-tests-logging-system.md  22-implement-logging-system.md  23-tests-error-handling.md  24-implement-error-handling.md
docs/: API_DISCREPANCIES.md  API_ENDPOINTS.md  KURU_API_SPEC.md  MASTER-PLAN.md  WORK_ITEMS.md
docs/work-items/: MASTER-PLAN.md  WI-001-monad-get-latest-transactions.md  WI-002-kuru-transaction-encoding.md  WI-003-kuru-estimate-cost-orderbook.md  WI-004-kuru-contract-address.md  WI-005-trade-copier-position-tracking.md  WI-006-settings-configuration-fields.md  WI-007-empty-files-cleanup.md
examples/: how-to-build-a-kuru-copy-trading-bot.md
examples/listeners/: blockchain_event_listener.py  kuru_websocket_listener.py  parse_recent_events.py
scripts/: check_margin_balance.py  deposit_margin.py  withdraw_margin.py
src/kuru_copytr_bot/: __init__.py  bot.py  main.py
src/kuru_copytr_bot/config/: constants.py  settings.py
src/kuru_copytr_bot/config/abis/: MarginAccount.json  OrderBook.json
src/kuru_copytr_bot/connectors/blockchain/: event_subscriber.py  monad.py
src/kuru_copytr_bot/connectors/websocket/: kuru_ws_client.py
src/kuru_copytr_bot/core/: enums.py  exceptions.py  interfaces.py
src/kuru_copytr_bot/models/: market.py  order.py  orderbook.py  position.py  trade.py  wallet.py
src/kuru_copytr_bot/monitoring/: detector.py  monitor.py
src/kuru_copytr_bot/risk/: calculator.py  validator.py
src/kuru_copytr_bot/trading/: copier.py  order_tracker.py  retry_queue.py
src/kuru_copytr_bot/utils/: decorators.py  logger.py  price.py
tests/: conftest.py
tests/fixtures/: __init__.py  events.py  markets.py  trades.py  transactions.py
tests/integration/: test_bot.py  test_kuru_contract_reads.py  test_kuru_testnet.py  test_margin_balance_flow.py  test_monad_testnet.py
tests/mocks/: blockchain.py  kuru.py
tests/unit/: test_bot.py
tests/unit/config/: test_constants.py  test_settings.py
tests/unit/connectors/: test_kuru_client.py  test_kuru_ws_client.py  test_monad_client.py
tests/unit/connectors/blockchain/: test_monad_contract_calls.py
tests/unit/core/: test_exceptions.py
tests/unit/models/: test_market.py  test_order.py  test_orderbook.py  test_position.py  test_trade.py  test_wallet.py
tests/unit/monitoring/: test_detector.py  test_monitor.py
tests/unit/risk/: test_calculator.py  test_validator.py
tests/unit/trading/: test_copier.py  test_copier_retry_integration.py  test_order_tracker.py  test_retry_queue.py
tests/unit/utils/: test_decorators.py  test_price.py
