[project]
name = "kuru-copytr-bot"
version = "0.1.0"
description = "Telegram bot with copywriting capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-socketio[asyncio_client]>=5.10.0",
    "requests>=2.31.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "websockets>=13.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/chainstacklabs/kuru-copy-trading-bot"
Repository = "https://github.com/chainstacklabs/kuru-copy-trading-bot"
Issues = "https://github.com/chainstacklabs/kuru-copy-trading-bot/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuru_copytr_bot"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

# Mypy configuration - relaxed to avoid overcomplicating code
[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
ignore_missing_imports = true
# Only catch basic errors, not strict type checking
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
# Disable strict optional checking
strict_optional = false
# Disable attribute and argument checking for flexibility with duck typing
disable_error_code = ["attr-defined", "arg-type", "call-arg", "return-value", "assignment", "union-attr", "call-overload", "var-annotated", "misc"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/kuru_copytr_bot",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
]
