[project]
name = "kuru-copytr-bot"
version = "0.1.0"
description = "Telegram bot with copywriting capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-socketio[asyncio_client]>=5.10.0",
    "requests>=2.31.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "websockets>=13.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/chainstacklabs/kuru-copy-trading-bot"
Repository = "https://github.com/chainstacklabs/kuru-copy-trading-bot"
Issues = "https://github.com/chainstacklabs/kuru-copy-trading-bot/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuru_copytr_bot"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

# Mypy configuration - balanced: catch real bugs, skip strict typing requirements
[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
# Check untyped code for errors but don't require type annotations everywhere
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Warnings
warn_return_any = false
warn_unused_ignores = true
warn_redundant_casts = true
# Allow some flexibility with None/Optional
strict_optional = false

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "web3.*",
    "eth_account.*",
    "dotenv.*",
    "pydantic_settings.*",
    "click.*",
    "websockets.*",
    "structlog.*",
    "socketio.*",
    "tenacity.*",
]
ignore_missing_imports = true

# MonadClient has many web3 type mismatches that work at runtime
[[tool.mypy.overrides]]
module = "src.kuru_copytr_bot.connectors.blockchain.monad"
disable_error_code = ["arg-type", "call-overload", "return-value", "union-attr"]

# Decorator return types are complex - work correctly at runtime
[[tool.mypy.overrides]]
module = "src.kuru_copytr_bot.utils.decorators"
disable_error_code = ["arg-type", "return-value"]

# KuruClient has some MarketParams type issues - works at runtime
[[tool.mypy.overrides]]
module = "src.kuru_copytr_bot.connectors.platforms.kuru"
disable_error_code = ["return-value", "assignment", "var-annotated"]

# Main CLI has Settings type issues with pydantic - works at runtime
[[tool.mypy.overrides]]
module = "src.kuru_copytr_bot.main"
disable_error_code = ["arg-type", "call-arg"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
]
